// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp fTuDSQ"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx bIPFLn"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx fzuzrg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx fqqsne"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp jlOnYs"
      size="small"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx jBMUOm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx iRimUp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx gzMIUT"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx bIPFLn"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx bIPFLn"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx fzuzrg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx bIPFLn"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx fzuzrg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx fqqsne"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx bIPFLn"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx fqqsne"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx fzuzrg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx fzuzrg"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx fqqsne"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx jBMUOm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx jBMUOm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx iRimUp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx jBMUOm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx iRimUp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx gzMIUT"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx jBMUOm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx gzMIUT"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx iRimUp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-cMOycp pSbFa"
    >
      <div
        className="sc-kjMGqw bCrbnX"
      >
        <div
          className="sc-kSmoGW iAAuAr"
        >
          <button
            className="sc-eqKtKx iRimUp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dDaJoQ dqCRYK"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-kSmoGW iAAuAr"
      >
        <button
          className="sc-eqKtKx gzMIUT"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
